--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Tarefas",
-    "slug": "Tarefas",
+    "name": "atv_tab_navigation",
+    "slug": "atv_tab_navigation",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
